--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- <canvas id="roulletdraw" width="400" height="400"></canvas> -->
         
         
-        <a href="roullete.html">やり直す</a>
+        <a href="index.html">やり直す</a>
     </div>
     <!-- <script src="../技術検証2/JS/roulette.js"></script> -->
     <script>
