--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </label>
         
        <h3>
-           掛ける目を選択して下さい<p>aこ</p>
+           掛ける目を選択して下さい<p></p>
        </h3>
 
         <h6>賭ける目の値が大きいほど当たりづらく、リターンが大きくなります</h6>
