各値の変更

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="top">
         <h1>へたっぴさ　欲望の解放のさせ方が下手</h1>
         
-    <h4 class="info">ルーレットを当てて手持ちを増やし、地下から脱出しよう</h4>
+    <h4 class="info">ルーレットを当てて手持ちを100000にしよう!</h4>
         <br>
         <h3>貴方の手持ち額:</h3>
         <h3 ><span id="yourMoney">10000</span>円</h3>
@@ -109,8 +109,8 @@ function determineResult(outcome, betNumber, betAmount) {
     if (money <= 0) {
         display2.innerHTML = "手持ち額が0円になりました。ページを読み込んで再挑戦するか、帝愛グループのシェルター建設のために地下労働をしてください。";
     }
-    else if (money >= 10000) {
-        display2.innerHTML = "おめでとうございます！手持ちが1000000となり一日外出権を手に入れました!!!";
+    else if (money >= 100000) {
+        display2.innerHTML = "おめでとうございます！手持ちが100000となり一日外出権を手に入れました!!!";
     }
     else {
         display2.innerHTML = "";
